fix sticky footer on mobile

--- a/www/style.css
+++ b/www/style.css
@@ -2,6 +2,15 @@
     font-family: 'Cambay', sans-serif;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin: 0 0 3em 0; /* bottom has to be the same as footer height */
+}
+
 .banner {
     text-align: center;
     background-color: yellowgreen;
@@ -46,4 +55,4 @@
     line-height: 3em;
     background-color: #f5f5f5;
     text-align: center;
-  }
+}
